# matlab-transmission

./: .gitignore  coils.xlsx  cont.py  difragma.xlsx  fin_base3_898_1600.m  grapg.py  main.py  poloidal_Flux.txt  psi_x_point.txt  pyproject.toml  sensors.xlsx  setup.py  zondu.xlsx  камера.xlsx
