[tool.poetry]
name = "progr-matlab"
version = "0.1.0"
description = ""
authors = ["Gleb Zverev <gleb@edge-capital-fund.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.12"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
